--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,9 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "strict": true,
+    "strictNullChecks": true
   },
   "files": [
     "src/main.ts",
