--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,8 @@
     "outDir": "./out-tsc/app",
     "types": [],
     "strict": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "experimentalDecorators": true
   },
   "files": [
     "src/main.ts",
