Split grid responsibility into grid service, remove row, column form inputs

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,9 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@components/*": [ "./src/app/components/*" ]
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
