--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,7 +4,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@components/*": [ "./src/app/components/*" ]
+      "@components/*": [ "src/app/components/*" ],
+      "@commands/*": [ "src/app/commands/*" ]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
